# Numenor-Archive

./: GITSUBMODULES.md  WinDevEnvironmentSetup.md
CORE/C++/C++/: README.md  SmartPointers.cpp  smartPoint
CORE/C++/C++/Books/EffectiveC++_MYERS/: Introduction.cpp  Item01.cpp  Item02.cpp  Item03.cpp  Item04.cpp  Item05.cpp  Item06.cpp  Item07.cpp  Item08.cpp  Item09.cpp  Item10.cpp  Item11.cpp  Item12.cpp  Item13.cpp  Item14.cpp  Item15.cpp  Item16.cpp  Item17.cpp  Item18.cpp  Item19.cpp  Item25.cpp
CORE/C++/C++Compiling/: README.md
CORE/C++/Clang/: .clang-format  README.md
CORE/DesignPattersGangOfFour/: Abstract-Factory.cpp  Adapter.cpp  Bridge-Adapter-Decorator-Proxy-Facade.cpp  Bridge.cpp  Command.cpp  Composite-Decorator.cpp  Composite.cpp  Decorator.cpp  Facade.cpp  Factory-Method.cpp  Iterator.cpp  Observer.cpp  Proxy.cpp  Singleton.cpp  State.cpp  Strategy.cpp  Template-Method.cpp
CORE/GIT/: README.md
CORE/JavaScriptAndNode/: Closures.js  Functions.js  README.md
CORE/JavaScriptAndNode/Books/JavaScript-The-Good-Parts/: Chapter2.js  Chapter3.js  chapter4.js
CORE/Linux(SHELL)/: README.md
CORE/VSCODE/: README.md
Cmake-Example-C++/: CMakeLists.txt  How to use Cmake.txt  Makefile
Cmake-Example-C++/include/: Dragon.h
Cmake-Example-C++/src/: Dragon.cpp  main.cpp
ConfigFiles/: .vimrc  BashBrancherParser
